Bug 220132 - Kopete crashes when accesing PyICQ transport ad-hoc GUIs
Summary: Kopete crashes when accesing PyICQ transport ad-hoc GUIs
Status: RESOLVED FIXED
Alias: None
Product: kopete
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Unspecified
: NOR crash
Target Milestone: ---
Assignee: Kopete Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-12-26 12:23 UTC by Yury
Modified: 2009-12-27 14:00 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Yury 2009-12-26 12:23:32 UTC
Version:            (using KDE 4.3.4)
Installed from:    openSUSE RPMs

If some of icq transport commands contain GUI (it called AFAIK "xforms") copete crashes when trying to access them. icq.jabbus.org should be great example.
Comment 1 Yury 2009-12-27 12:47:12 UTC
sorry not icq.jabbus.org, jabber.justlan.ru, something like 'settings' or 'set xstatus' in it's icq.jabber.justlan.ru transport. available after register (just use icq acc without contacts in its roaster, else you will experience some troubles with dirty contact list)
Comment 2 Roman Jarosz 2009-12-27 13:19:36 UTC
Where the 'settings' or 'set xstatus' should be? I've added clean ICQ transport and can't find it anywhere. Could you add screenshot and backtrace?
Comment 3 Roman Jarosz 2009-12-27 13:29:58 UTC
Never mind, I found it, it's in transport registration dialog and it crashes
Comment 4 Roman Jarosz 2009-12-27 14:00:07 UTC
SVN commit 1066565 by rjarosz:

Fix crash in Command executing dialog.
Polish the XData dialog.
	
BUG: 220132


 M  +5 -4      jabberxdatawidget.cpp  
 M  +5 -2      ui/dlgahcommand.cpp  
 M  +0 -4      ui/dlgahcommand.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1066565