Fix crash in Command executing dialog. Polish the XData dialog.

BUG: 220132

svn path=/trunk/KDE/kdenetwork/kopete/; revision=1066565